# tiny-chat

./: README.md  pyproject.toml
backend/: app.py
config/: tiny_chat.yaml
config/environments/: demo.yaml  workflow_provider_config.yaml
conversation_logs/: conversation_20250820_204541.json
data/: README.md  dump_agent_profiles_from_sotopia.py  dump_environment_profiles_from_sotopia.py  dump_profiles_from_sotopia.py
docs/: custom_template.md
examples/: README.md  custom_handlers.py  custom_template.py  human_agent_chat.py  human_agent_chat_demo.py  multi_agent_chat.py  multi_agent_chat_demo.py  multi_agent_chat_obs_control.py  multi_agent_multi_model_demo.py  multi_agents_chat.py  run_chat.py  two_agents_chat.py
examples/config/: tiny_chat.yaml
examples/two_agents_chat/: run.sh  two_agents_chat.py  two_agents_chat.yml
scripts/: prompt_cli.py
tests/: test_profile.py
tiny_chat/: README.md  README_zh.md  __init__.py  cli.py  config.py  logs.py  server.py  utils.py
tiny_chat/agents/: __init__.py  agents.py  base_agent.py  human_agent.py  llm_agent.py  llm_client.py
tiny_chat/creators/: __init__.py  agent_creator.py  base_creator.py  environment_creator.py  relationship_creator.py
tiny_chat/data/: __init__.py  loader.py
tiny_chat/envs/: __init__.py  base.py  environment.py  tinychat_env.py
tiny_chat/evaluator/: __init__.py  base.py  dimensions.py  evaluators.py  llm_evaluator.py  manager.py  rule_based.py  utils.py
tiny_chat/generator/: __init__.py  generate.py  generate_template.py  output_parsers.py
tiny_chat/messages/: __init__.py  messages.py
tiny_chat/profile/: __init__.py  profile.py
(+52 files in other folders)
